--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_lints: ^1.0.4
   google_fonts: ^2.1.0
+  getwidget: ^2.0.4
 
   #locators
   get_it: ^7.2.0
